--- a/indexGUI.html
+++ b/indexGUI.html
@@ -21,9 +21,12 @@
 
 <div class="item item-1">
             <h3 style="margin: 0; padding: 0; text-align: left;">Welcome</h3>
-                <p>Through my academic projects and hands-on learning, I’ve tackled challenges in automation, logistics, employee management, and web development. My work experience, though early in my career, demonstrates a strong foundation in solving real-world problems with innovative solutions.
-                </p> <p>
-Whether it's optimizing processes or building responsive web applications, I am eager to bring my skills to a professional setting. If you're looking for someone who is passionate, driven, and ready to contribute from day one—let's connect and make an impact together. </p>
+                <p> 
+                    Hi, I'm Anirudh Roy, a recent graduate with a degree in Maths, Statistics, and Computer Science, based in Pune, MH, India.</p>
+                <p>
+                    I'm deeply passionate about game design and video games, which fuels my enthusiasm for creating engaging and interactive experiences. Outside of tech, I enjoy playing basketball and staying active.</p>
+                <p>  
+                    While I have a set of preferred tools, I'm always open to exploring the best option for each project, ensuring that the chosen solution is the most effective one. My primary goal is to find the right solution for each challenge I encounter.</p>
             <div class="site-buttons">
                 <a href="https://github.com/royanirudd" target="_blank">
                     <button type="button" class="social-button github"><i class="fab fa-github"></i> </button>
@@ -31,7 +34,7 @@ Whether it's optimizing processes or building responsive web applications, I am 
                 <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">
                     <button type="button" class="social-button linkedin"><i class="fab fa-linkedin"></i> </button>
                 </a>
-                <a href="index.html" >
+                <a href="indexCLI.html" >
                     <button type="button" class="social-button terminal"><i class="fas fa-terminal"></i> </button>
                 </a>
                 </div>
@@ -41,33 +44,45 @@ Whether it's optimizing processes or building responsive web applications, I am 
                 <img src="assets/AnirudhPic.png">
             </div>
             <div class="item item-2">
-                <h3>About me</h3>
+                <h3>Skill-set/Experience</h3>
                 <p>
-                    Hi, I'm Anirudh Roy, a recent graduate with a degree in Maths, Statistics, and Computer Science, based in Pune, MH, India.
                 </p>
                 <p>
 My skill set includes a diverse range of tools and technologies:
-                <p>
-    Programming Languages: JavaScript, Python, Java, C
-    Web Technologies: HTML, CSS, React, Node.js
-    Databases: MySQL, MongoDB, MS SQL Server
-    Tools: Git, Docker, AWS
-                </p>
-                <p>
-I'm deeply passionate about game design and video games, which fuels my enthusiasm for creating engaging and interactive experiences. Outside of tech, I enjoy playing basketball and staying active.
-                </p>
-                <p>
-While I have a set of preferred tools, I'm always open to exploring the best option for each project, ensuring that the chosen solution is the most effective one. My primary goal is to find the right solution for each challenge I encounter.
-                </p>
+                    <ul class="nested-list">
+                        <ul>Programming languages
+                            <li>JavaScript</li>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>C</li>
+                        </ul>
+                        <ul>WebTechnologies
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>React</li>
+                            <li>Node.js</li>
+                        </ul>
+                        <ul>Databases
+                            <li>MySQL</li>
+                            <li>MongoDB</li>
+                            <li>MS SQL Server</li>
+                        </ul>
+                        <ul>Tools
+                            <li>Git</li>
+                            <li>Docker</li>
+                            <li>AWS</li>
+                        </ul>
+                    </ul>
+                <p>As a recent graduate with hands-on experience in automation, logistics, employee management, and web development, I've honed my skills in solving real-world problems through innovative solutions. Passionate about optimizing processes and building responsive applications, I'm eager to contribute my expertise to a professional setting and make an immediate impact.</p>
             </div>
             <div class="item item-3">
                 <h3>Contact me</h3>
                 <ul> 
-                    <li>
-                        <a href="" target="_blank">Github</a>
+                    <li class="mob-none">
+                        <a href="https://github.com/royanirudd" target="_blank">Github</a>
                     </li>
-                    <li>
-                        <a href="" target="_blank">LinkedIn</a>
+                    <li class="mob-none">
+                        <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">LinkedIn</a>
                     </li>
                     <li>
                         <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
@@ -87,6 +102,7 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
  
 
             <div class="item item-5">
+                <a href="https://github.com/royanirudd/" target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Projects:</h3>
                 <ul style="list-style-type: none;">
                     <li>
@@ -100,7 +116,8 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
                     </li>
                 </ul>
                 <br>
-                <h3> Click here for more </h3>
+                <h3> Click here for GitHub</h3>
+            </a>
             </div>
             <div class="item item-6">
                 <a href="https://github.com/royanirudd/ai-or-human-web" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
@@ -113,12 +130,14 @@ While I have a set of preferred tools, I'm always open to exploring the best opt
                 Your browser does not support the video tag.
                 </video>
             </div>
+                <a href="https://drive.google.com/file/d/1KeIRrQYfUFTIZHS55qTpnjJFwBgFNXZM/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="item item-8">
-                <h3>Work experience:</h3>
+                <h3>Updated resume</h3>
                 <br>
-                <p>11 months of experience</p>
+                <p>BSc Maths, Stats, CS</p>
                 <br>
-                <p>Click here for more info</p>
+                <p>Click here for resume</p>
+            </a>
             </div>
             <div class="item item-9">
                 <div class="color-picker">
