--- a/indexGUI.html
+++ b/indexGUI.html
@@ -50,27 +50,28 @@
                 <p>
 My skill set includes a diverse range of tools and technologies:
                     <ul class="nested-list">
-                        <ul>Programming languages
-                            <li>JavaScript</li>
-                            <li>Python</li>
-                            <li>Java</li>
-                            <li>C</li>
+                        <ul>Programming languages, Experience
+                            <li>JavaScript Intermediate</li>
+                            <li>Python Intermediate</li>
+                            <li>Java Expert</li>
+                            <li>C Intermediate</li>
+                            <li>Lua Beginner</li>
                         </ul>
                         <ul>WebTechnologies
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>React</li>
-                            <li>Node.js</li>
+                            <li>HTML Intermediate</li>
+                            <li>CSS Intermediate</li>
+                            <li>React Intermediate</li>
+                            <li>Node.js Expert</li>
                         </ul>
                         <ul>Databases
-                            <li>MySQL</li>
-                            <li>MongoDB</li>
-                            <li>MS SQL Server</li>
+                            <li>MySQL Expert</li>
+                            <li>MongoDB Intermediate</li>
+                            <li>MS SQL Server Expert</li>
                         </ul>
                         <ul>Tools
-                            <li>Git</li>
-                            <li>Docker</li>
-                            <li>AWS</li>
+                            <li>Git Expert</li>
+                            <li>Docker Beginner</li>
+                            <li>AWS Beginner</li>
                         </ul>
                     </ul>
                 <p>As a recent graduate with hands-on experience in automation, logistics, employee management, and web development, I've honed my skills in solving real-world problems through innovative solutions. Passionate about optimizing processes and building responsive applications, I'm eager to contribute my expertise to a professional setting and make an immediate impact.</p>
@@ -104,7 +105,7 @@ My skill set includes a diverse range of tools and technologies:
             <div class="item item-5">
                 <a href="https://github.com/royanirudd/" target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Projects:</h3>
-                <ul style="list-style-type: none;">
+                <ul id="projectList" style="list-style-type: none;">
                     <li>
                         Mock travel agency website (full stack web app)
                     </li>
