--- a/indexGUI.html
+++ b/indexGUI.html
@@ -107,13 +107,13 @@ My skill set includes a diverse range of tools and technologies:
                     <h3>Projects:</h3>
                 <ul id="projectList" style="list-style-type: none;">
                     <li>
-                        Mock travel agency website (full stack web app)
+                        Fantasy EPL Draft Website
                     </li>
                     <li>
-                        Data science projects
+                        TierList Builder
                     </li>
                     <li>
-                        Ai-or-Human game (discord bot and web app)
+                        Wikipedia Racing Browser Extension
                     </li>
                 </ul>
                 <br>
@@ -134,10 +134,12 @@ My skill set includes a diverse range of tools and technologies:
                 <a href="https://drive.google.com/file/d/1KeIRrQYfUFTIZHS55qTpnjJFwBgFNXZM/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="item item-8">
                 <h3>Updated resume</h3>
-                <br>
-                <p>BSc Maths, Stats, CS</p>
-                <br>
-                <p>Click here for resume</p>
+                <div class="hideItem8">
+                    <br>
+                    <p>BSc Maths, Stats, CS</p>
+                    <br>
+                    <p>Click here for resume</p>
+                </div>
             </a>
             </div>
             <div class="item item-9">
@@ -151,8 +153,8 @@ My skill set includes a diverse range of tools and technologies:
             </div>
 
             <div class="item item-10">
-                <a href="https://github.com/royanirudd/Ai-or-human" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
-                    <h3>Discord AI or Human bot</h3>
+                <a href="https://github.com/royanirudd/dynamic-theme-changer" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                    <h3>Neovim Plugin, dynamic theme changer</h3>
                 </a>
             </div>
             <div class="item item-11" style="font-size: 14px;">
