--- a/indexGUI.html
+++ b/indexGUI.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="stylesGUI.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
 </head>
+
 <body class="dark-mode">
     <label class="switch">
         <input type="checkbox" id="modeSwitch" onclick="toggleMode()">
@@ -19,14 +22,18 @@
 
     <main class="container">
 
-<div class="item item-1">
+        <div class="item item-1">
             <h3 style="margin: 0; padding: 0; text-align: left;">Welcome</h3>
-                <p> 
-                    Hi, I'm Anirudh Roy, a recent graduate with a degree in Maths, Statistics, and Computer Science, based in Pune, MH, India.</p>
-                <p>
-                    I'm deeply passionate about game design and video games, which fuels my enthusiasm for creating engaging and interactive experiences. Outside of tech, I enjoy playing basketball and staying active.</p>
-                <p>  
-                    While I have a set of preferred tools, I'm always open to exploring the best option for each project, ensuring that the chosen solution is the most effective one. My primary goal is to find the right solution for each challenge I encounter.</p>
+            <p>
+                Hi, I'm Anirudh Roy, a recent graduate with a degree in Maths, Statistics, and Computer Science, based
+                in Pune, MH, India.</p>
+            <p>
+                I'm deeply passionate about game design and video games, which fuels my enthusiasm for creating engaging
+                and interactive experiences. Outside of tech, I enjoy playing basketball and staying active.</p>
+            <p>
+                While I have a set of preferred tools, I'm always open to exploring the best option for each project,
+                ensuring that the chosen solution is the most effective one. My primary goal is to find the right
+                solution for each challenge I encounter.</p>
             <div class="site-buttons">
                 <a href="https://github.com/royanirudd" target="_blank">
                     <button type="button" class="social-button github"><i class="fab fa-github"></i> </button>
@@ -34,80 +41,86 @@
                 <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">
                     <button type="button" class="social-button linkedin"><i class="fab fa-linkedin"></i> </button>
                 </a>
-                <a href="indexCLI.html" >
+                <a href="indexCLI.html">
                     <button type="button" class="social-button terminal"><i class="fas fa-terminal"></i> </button>
                 </a>
-                </div>
             </div>
- 
-            <div class="item item-12">
-                <img src="assets/AnirudhPic.png">
-            </div>
-            <div class="item item-2">
-                <h3>Skill-set/Experience</h3>
-                <p>
-                </p>
-                <p>
-My skill set includes a diverse range of tools and technologies:
-                    <ul class="nested-list">
-                        <ul>Programming languages, Experience
-                            <li>JavaScript Intermediate</li>
-                            <li>Python Intermediate</li>
-                            <li>Java Expert</li>
-                            <li>C Intermediate</li>
-                            <li>Lua Beginner</li>
-                        </ul>
-                        <ul>WebTechnologies
-                            <li>HTML Intermediate</li>
-                            <li>CSS Intermediate</li>
-                            <li>React Intermediate</li>
-                            <li>Node.js Expert</li>
-                        </ul>
-                        <ul>Databases
-                            <li>MySQL Expert</li>
-                            <li>MongoDB Intermediate</li>
-                            <li>MS SQL Server Expert</li>
-                        </ul>
-                        <ul>Tools
-                            <li>Git Expert</li>
-                            <li>Docker Beginner</li>
-                            <li>AWS Beginner</li>
-                        </ul>
-                    </ul>
-                <p>As a recent graduate with hands-on experience in automation, logistics, employee management, and web development, I've honed my skills in solving real-world problems through innovative solutions. Passionate about optimizing processes and building responsive applications, I'm eager to contribute my expertise to a professional setting and make an immediate impact.</p>
-            </div>
-            <div class="item item-3">
-                <h3>Contact me</h3>
-                <ul> 
-                    <li class="mob-none">
-                        <a href="https://github.com/royanirudd" target="_blank">Github</a>
-                    </li>
-                    <li class="mob-none">
-                        <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">LinkedIn</a>
-                    </li>
-                    <li>
-                        <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
-                    </li>
-                    <li>
-                        <p>Email: <span id="contactNoLink">aniruddroy704@gmail.com</span></p>
-                    </li>
+        </div>
+
+        <div class="item item-12">
+            <img src="assets/AnirudhPic.png">
+        </div>
+        <div class="item item-2">
+            <h3>Skill-set/Experience</h3>
+            <p>
+            </p>
+            <p>
+                My skill set includes a diverse range of tools and technologies:
+            <ul class="nested-list">
+                <ul>Programming languages, Experience
+                    <li>JavaScript Intermediate</li>
+                    <li>Python Expert</li>
+                    <li>Java Expert</li>
+                    <li>C Intermediate</li>
+                    <li>Lua Beginner</li>
+                    <li>C# Intermediate</li>
                 </ul>
-            </div>
-            <div class="item item-4">
-                <video autoplay loop muted playsinline class="animation-video">
+                <ul>WebTechnologies
+                    <li>HTML Expert</li>
+                    <li>CSS Intermediate</li>
+                    <li>React Intermediate</li>
+                    <li>Node.js Expert</li>
+                    <li>ASP.NET Intermediate</li>
+                    <li>Blazor Intermediate</li>
+                </ul>
+                <ul>Databases
+                    <li>MySQL Expert</li>
+                    <li>MongoDB Intermediate</li>
+                    <li>MS SQL Server Expert</li>
+                </ul>
+                <ul>Tools
+                    <li>Git Expert</li>
+                    <li>Docker Beginner</li>
+                    <li>AWS Beginner</li>
+                </ul>
+            </ul>
+            <p>As a recent graduate with hands-on experience in automation, logistics, employee management, and web
+                development, I've honed my skills in solving real-world problems through innovative solutions.
+                Passionate about optimizing processes and building responsive applications, I'm eager to contribute my
+                expertise to a professional setting and make an immediate impact.</p>
+        </div>
+        <div class="item item-3">
+            <h3>Contact me</h3>
+            <ul>
+                <li class="mob-none">
+                    <a href="https://github.com/royanirudd" target="_blank">Github</a>
+                </li>
+                <li class="mob-none">
+                    <a href="https://www.linkedin.com/in/anirudh-roy1/" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <p>Mobile: <span id="contactNoLink">+91 8050581848</span></p>
+                </li>
+                <li>
+                    <p>Email: <span id="contactNoLink">aniruddroy704@gmail.com</span></p>
+                </li>
+            </ul>
+        </div>
+        <div class="item item-4">
+            <video autoplay loop muted playsinline class="animation-video">
                 <source src="assets/anim.webm" type="video/webm">
                 Your browser does not support the video tag.
-                </video>
-            </div>
- 
- 
+            </video>
+        </div>
 
-            <div class="item item-5">
-                <a href="https://github.com/royanirudd/" target="_blank" style="text-decoration: none; color: inherit;">
-                    <h3>Projects:</h3>
+
+
+        <div class="item item-5">
+            <a href="https://github.com/royanirudd/" target="_blank" style="text-decoration: none; color: inherit;">
+                <h3>Projects:</h3>
                 <ul id="projectList" style="list-style-type: none;">
                     <li>
-                        Fantasy EPL Draft Website
+                        Reddit TTS Bot
                     </li>
                     <li>
                         TierList Builder
@@ -119,19 +132,21 @@ My skill set includes a diverse range of tools and technologies:
                 <br>
                 <h3> Click here for GitHub</h3>
             </a>
-            </div>
-            <div class="item item-6">
-                <a href="https://github.com/royanirudd/ai-or-human-web" target="_blank" style="display: block; height: 100%; color: inherit; text-decoration: none;">
-                    <h3>AI or Human game web app</h3>
-                </a>
-            </div>
-            <div class="item item-7">
-                <video autoplay loop muted playsinline class="animation-video">
+        </div>
+        <div class="item item-6">
+            <a href="https://github.com/royanirudd/ai-or-human-web" target="_blank"
+                style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                <h3>AI or Human game web app</h3>
+            </a>
+        </div>
+        <div class="item item-7">
+            <video autoplay loop muted playsinline class="animation-video">
                 <source src="assets/anim2.webm" type="video/webm">
                 Your browser does not support the video tag.
-                </video>
-            </div>
-                <a href="https://drive.google.com/file/d/1KeIRrQYfUFTIZHS55qTpnjJFwBgFNXZM/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;">
+            </video>
+        </div>
+        <a href="https://drive.google.com/file/d/1KeIRrQYfUFTIZHS55qTpnjJFwBgFNXZM/view?usp=sharing" target="_blank"
+            style="text-decoration: none; color: inherit;">
             <div class="item item-8">
                 <h3>Updated resume</h3>
                 <div class="hideItem8">
@@ -140,28 +155,32 @@ My skill set includes a diverse range of tools and technologies:
                     <br>
                     <p>Click here for resume</p>
                 </div>
-            </a>
+        </a>
+        </div>
+        <div class="item item-9">
+            <div class="color-picker">
+                <button class="color-btn" style="background-color: red;" onclick="changeBorderColor('red')"></button>
+                <button class="color-btn" style="background-color: green;"
+                    onclick="changeBorderColor('green')"></button>
+                <button class="color-btn" style="background-color: blue;" onclick="changeBorderColor('blue')"></button>
+                <button class="color-btn" style="background-color: purple;"
+                    onclick="changeBorderColor('purple')"></button>
+                <button class="color-btn" style="background-color: yellow;"
+                    onclick="changeBorderColor('yellow')"></button>
             </div>
-            <div class="item item-9">
-                <div class="color-picker">
-                    <button class="color-btn" style="background-color: red;" onclick="changeBorderColor('red')"></button>
-                    <button class="color-btn" style="background-color: green;" onclick="changeBorderColor('green')"></button>
-                    <button class="color-btn" style="background-color: blue;" onclick="changeBorderColor('blue')"></button>
-                    <button class="color-btn" style="background-color: purple;" onclick="changeBorderColor('purple')"></button>
-                    <button class="color-btn" style="background-color: yellow;" onclick="changeBorderColor('yellow')"></button>
-                </div>
-            </div>
+        </div>
 
-            <div class="item item-10">
-                <a href="https://github.com/royanirudd/dynamic-theme-changer" target="_blank"style="display: block; height: 100%; color: inherit; text-decoration: none;">
-                    <h3>Neovim Plugin, dynamic theme changer</h3>
-                </a>
-            </div>
-            <div class="item item-11" style="font-size: 14px;">
-                <h3>&#169;Designed by Anirudh Roy 2024</h3>
-            </div>
+        <div class="item item-10">
+            <a href="https://github.com/royanirudd/dynamic-theme-changer" target="_blank"
+                style="display: block; height: 100%; color: inherit; text-decoration: none;">
+                <h3>Neovim Plugin, dynamic theme changer</h3>
+            </a>
+        </div>
+        <div class="item item-11" style="font-size: 14px;">
+            <h3>&#169;Designed by Anirudh Roy 2024</h3>
+        </div>
     </main>
     <script src="scriptGUI.js"></script>
 </body>
-</html>
 
+</html>
